chore(config): 웹사이트 주소 변경
Signed-off-by: Team-CRURU <cruru.dev@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.cruru.kr/"
+baseURL = "team-cruru.github.io"
 languageCode = "en-us"
 title = "Team Cruru's Dev Blog"
 theme = "DoIt"
