--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
 baseURL = "team-cruru.github.io"
 languageCode = "en-us"
-title = "Team Cruru's Dev Blog"
+title = "Team Cruru Dev Blog"
 theme = "DoIt"
