chore: base URL 변경 및 Title 변경
Signed-off-by: Team-CRURU <cruru.dev@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "team-cruru.github.io"
+baseURL = "https://blog.cruru.kr/"
 languageCode = "en-us"
-title = "Cruru-Dev-Blog"
+title = "Team Cruru. Dev Blog"
 theme = "DoIt"
