--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "Team Cruru. Dev Blog"
 
 [module]
+    replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
     [[module.imports]]
         path = "github.com/colinwilson/lotusdocs"
         disable = false
