--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,6 +7,7 @@ title = "Team Cruru. Dev Blog"
     [[module.imports]]
         path = "github.com/colinwilson/lotusdocs"
         disable = false
+    replacements = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5 -> hugo-mod-bootstrap-scss"
     [[module.imports]]
         path = "github.com/gohugoio/hugo-mod-bootstrap-scss/v5"
         disable = false
