--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,9 +1,4 @@
 baseURL = "https://blog.cruru.kr/"
 languageCode = "en-us"
 title = "Team Cruru. Dev Blog"
-
-[module]
-    replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
-    [[module.imports]]
-        path = "github.com/colinwilson/lotusdocs"
-        disable = false
+theme = "lotusdocs"
